plugins {
	id 'java-library'
}

repositories {
	mavenCentral()
}

dependencies {
	// Gson liefert Minecraft selbst mit – daher nur zum Kompilieren.
	compileOnly "com.google.code.gson:gson:${gson_version}"

	testImplementation "com.google.code.gson:gson:${gson_version}"
	testImplementation platform("org.junit:junit-bom:${junit_version}")
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// common wird in JEDE Mod-JAR mitkompiliert – auch für Minecraft 1.14–1.16 (Java 8).
// Deshalb: nur Java-8-Sprache und -API (keine records/var/switch-Ausdrücke/List.of …).
tasks.named('compileJava') {
	options.release = 8
	options.compilerArgs << '-Xlint:-options'
}

test {
	useJUnitPlatform()
	testLogging {
		events 'passed', 'skipped', 'failed'
	}
}
